2011-01-04  Leo Yang  <leo.yang@torchmobile.com.cn>

        Reviewed by Dirk Schulze.

        Malformed SVG causes crash in updateContainerOffset
        https://bugs.webkit.org/show_bug.cgi?id=44610

        Test case for recursive svg <use>.
        This test case passes if no crash occurs.

        * svg/custom/recursive-use-expected.txt: Added.
        * svg/custom/recursive-use.svg: Added.

2011-01-03  Kent Tamura  <tkent@chromium.org>

        Unreviewed, test expectation update

        Add expectations of r74954 tests for Chromium.

        * platform/chromium-linux/fast/css-generated-content/table-before-after-child-add-expected.checksum: Added.
        * platform/chromium-linux/fast/css-generated-content/table-before-after-child-add-expected.png: Added.
        * platform/chromium-linux/fast/css-generated-content/table-cell-before-after-child-add-expected.checksum: Added.
        * platform/chromium-linux/fast/css-generated-content/table-cell-before-after-child-add-expected.png: Added.
        * platform/chromium-linux/fast/css-generated-content/table-row-before-after-child-add-expected.checksum: Added.
        * platform/chromium-linux/fast/css-generated-content/table-row-before-after-child-add-expected.png: Added.
        * platform/chromium-linux/fast/css-generated-content/table-table-before-after-child-add-expected.checksum: Added.
        * platform/chromium-linux/fast/css-generated-content/table-table-before-after-child-add-expected.png: Added.
        * platform/chromium-mac/fast/css-generated-content/table-before-after-child-add-expected.checksum: Added.
        * platform/chromium-mac/fast/css-generated-content/table-before-after-child-add-expected.png: Added.
        * platform/chromium-mac/fast/css-generated-content/table-cell-before-after-child-add-expected.checksum: Added.
        * platform/chromium-mac/fast/css-generated-content/table-cell-before-after-child-add-expected.png: Added.