@@ -1,5 +1,17 @@
 2011-01-04  Sheriff Bot  <webkit.review.bot@gmail.com>
 
+        Unreviewed, rolling out r74960.
+        http://trac.webkit.org/changeset/74960
+        https://bugs.webkit.org/show_bug.cgi?id=51868
+
+        Rollout since we hit an assert after this patch. (Requested by
+        krit on #webkit).
+
+        * svg/SVGUseElement.cpp:
+        (WebCore::SVGUseElement::buildInstanceTree):
+
+2011-01-04  Sheriff Bot  <webkit.review.bot@gmail.com>
+
         Unreviewed, rolling out r74961.
         http://trac.webkit.org/changeset/74961
         https://bugs.webkit.org/show_bug.cgi?id=51867
