@@ -1,3 +1,15 @@
+2011-01-04  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r74960.
+        http://trac.webkit.org/changeset/74960
+        https://bugs.webkit.org/show_bug.cgi?id=51868
+
+        Rollout since we hit an assert after this patch. (Requested by
+        krit on #webkit).
+
+        * svg/custom/recursive-use-expected.txt: Removed.
+        * svg/custom/recursive-use.svg: Removed.
+
 2011-01-04  Leo Yang  <leo.yang@torchmobile.com.cn>
 
         Reviewed by Dirk Schulze.
